--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
           <target>8</target>
         </configuration>
       </plugin>
+	  
+	  <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+		<version>3.4.0</version>
+      </plugin>
 
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
@@ -180,7 +185,13 @@
         <artifactId>jsp-api</artifactId>
         <version>2.2</version>
       </dependency>
-
+	  
+	  <dependency>
+	 	 <groupId>org.apache.maven.plugins</groupId>
+	 	 <artifactId>maven-war-plugin</artifactId>
+	 	 <version>3.4.0</version>
+	  </dependency>
+	  
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit-dep</artifactId>
